[gd_scene load_steps=4 format=3 uid="uid://dvgdal4hlx1ws"]

[ext_resource type="Script" path="res://work_container.gd" id="1_3r0v0"]
[ext_resource type="Theme" uid="uid://i63124txlj1h" path="res://label_theme.tres" id="1_eug6i"]
[ext_resource type="Theme" uid="uid://ppd28w7sx5wa" path="res://button_theme.tres" id="2_2j8yh"]

[node name="WorkContainer" type="HBoxContainer"]
offset_top = 496.0
offset_right = 1920.0
offset_bottom = 643.0
size_flags_vertical = 3
alignment = 1
script = ExtResource("1_3r0v0")

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 2
theme = ExtResource("1_eug6i")
placeholder_text = "새항목추가"
editable = false
expand_to_text_length = true

[node name="MenuButton" type="MenuButton" parent="."]
layout_mode = 2
theme = ExtResource("2_2j8yh")
text = "수정하기"
item_count = 3
popup/item_0/text = "서브워크이름바꾸기"
popup/item_0/id = 0
popup/item_1/text = "서브워크지우기"
popup/item_1/id = 1
popup/item_2/text = "서브워크추가하기"
popup/item_2/id = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="SecDecButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_2j8yh")
text = "<"

[node name="SecLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_eug6i")
text = "00:00"

[node name="SecIncButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_2j8yh")
text = ">"

[node name="SecRemainLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_eug6i")
text = "00:00"

[connection signal="toggled" from="MenuButton" to="." method="_on_menu_button_toggled"]
[connection signal="pressed" from="SecDecButton" to="." method="_on_sec_dec_button_pressed"]
[connection signal="pressed" from="SecIncButton" to="." method="_on_sec_inc_button_pressed"]
